classDiagram
    direction TB

    %% ============================================
    %% ORGANIZATION & USERS (IDENTITY MODULE)
    %% ============================================

    class User {
        +UUID id
        +String username
        +String email
        +String passwordHash
        +Set~PlatformRole~ roles
        +String displayName
        +String avatarUrl
        +String githubUsername
        +boolean enabled
        +Instant createdAt
        +Instant updatedAt
    }

    class Organization {
        +UUID id
        +String name
        +String slug
        +UUID ownerId
        +Instant createdAt
    }

    class OrgMember {
        +UUID id
        +UUID userId
        +UUID organizationId
        +OrgRole role
        +List~UUID~ policyIds
        +Instant joinedAt
    }

    %% ============================================
    %% PROJECTS & TEAMS (GOVERNANCE MODULE)
    %% ============================================

    class Team {
        +UUID id
        +String name
        +UUID organizationId
        +Instant createdAt
    }

    class TeamMember {
        +UUID id
        +UUID userId
        +UUID teamId
        +String role
        +List~UUID~ policyIds
        +Instant joinedAt
    }

    class Project {
        +UUID id
        +String name
        +UUID teamId
        +String k8sNamespace
        +Instant createdAt
        +Instant updatedAt
    }

    %% ============================================
    %% APPLICATIONS & BUILDING (MANAGEMENT MODULE)
    %% ============================================

    class Application {
        +UUID id
        +String name
        +UUID projectId
        +String gitRepoUrl
        +String buildBranch
        +String dockerfilePath
        +String startCommand
        +Integer containerPort
        +Map~String,String~ envVars
    }

    class ServiceConnection {
        +UUID id
        +UUID sourceAppId
        +UUID targetAppId
        +String metadata
    }

    class Build {
        +UUID id
        +UUID applicationId
        +String commitHash
        +BuildStatus status
        +String imageTag
        +String jobName
        +Instant startTime
        +Instant endTime
    }

    %% ============================================
    %% DEPLOYMENTS & RUNTIME (ORCHESTRATION MODULE)
    %% ============================================

    class Deployment {
        +UUID id
        +UUID applicationId
        +String version
        +int replicas
        +DeploymentStatus status
        +String ingressUrl
        +Instant deployedAt
    }

    class DeploymentStage {
        +UUID id
        +String name
        +PipelineStatus status
        +int orderIndex
        +Long estimatedDuration
        +Instant startTime
        +Instant endTime
    }

    class DeploymentStep {
        +UUID id
        +String name
        +PipelineStatus status
        +String logSnippet
        +Instant timestamp
    }

    %% ============================================
    %% STRICT RELATIONSHIPS & MULTIPLICITIES
    %% ============================================

    User "1" -- "*" OrgMember : is member of
    Organization "1" -- "*" OrgMember : contains
    
    Organization "1" -- "*" Team : owns
    
    User "1" -- "*" TeamMember : is member of
    Team "1" -- "*" TeamMember : contains
    
    Team "1" -- "*" Project : manages
    Project "1" -- "*" Application : hosts

    Application "1" -- "*" ServiceConnection : source
    Application "1" -- "*" ServiceConnection : target

    Application "1" -- "*" Build : triggers
    Application "1" -- "0..1" Deployment : has current
    
    Build "1" -- "0..1" Deployment : produces
    
    Deployment "1" *-- "*" DeploymentStage : composition
    DeploymentStage "1" *-- "*" DeploymentStep : composition

    %% Metadata Enums
    class PlatformRole { <<enumeration>> ADMIN, USER }
    class OrgRole { <<enumeration>> OWNER, MEMBER, VIEWER }
    class BuildStatus { <<enumeration>> PENDING, RUNNING, SUCCESS, FAILED, CANCELLED }
    class DeploymentStatus { <<enumeration>> IN_PROGRESS, HEALTHY, UNHEALTHY, FAILED, STOPPED, RESTARTING }
    class PipelineStatus { <<enumeration>> PENDING, RUNNING, SUCCESS, FAILED, SKIPPED }
